# pytkdraw

./: INSTALL  LICENSE  README  README.md  basic_example.py  example1.py  example2.py  example_basic.py  example_readme.py  graph.py  setup.cfg  setup.py
.github/workflows/: pylint.yml
docs/: index.html  tkdraw.basic.html  tkdraw.html  tkdraw.screen.html  tkdraw.test.html  tkdraw.test.test_basic.html  tkdraw.test.test_screen.html
docs/tkdraw/: basic.html  index.html  screen.html
docs/tkdraw/test/: index.html  test_basic.html  test_screen.html
examples/: example_basic.py  example_readme.py  example_screen_1.py  example_screen_2.py
tests/: test_screen.py
tkdraw/: __init__.py  basic.py  screen.py  tkdraw.py
tkdraw/test/: __init__.py  __main__.py  test_basic.py  test_screen.py  test_screen1.py
