[metadata]
name = tkdraw-VincentLoechner
version = 0.1e
author = Vincent Loechner
author_email = loechner@unistra.fr
description = A basic draw GUI based on tkinter, synchroneous
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentloechner/pytkdraw.git
project_urls =
    Bug Tracker = https://github.com/vincentloechner/pytkdraw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
package_dir =
packages = tkdraw
python_requires = >=3.6

[options.packages.find]
where = src
