[metadata]
name = tkdraw
version = 0.1.1a8
author = Vincent Loechner
author_email = loechner@unistra.fr
description = A basic synchronous draw GUI based on tkinter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentloechner/pytkdraw.git
project_urls =
    Bug Tracker = https://github.com/vincentloechner/pytkdraw/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
